--- a/k8s/gitops/addons/grafana/application.yaml
+++ b/k8s/gitops/addons/grafana/application.yaml
@@ -7,7 +7,7 @@ metadata:
     workload: operations
     isGrafana: "true"
   annotations:
-    argocd.argoproj.io/sync-wave: "11" # We need the grafana server installed after database
+    argocd.argoproj.io/sync-wave: "13" # We need the grafana server installed after database, otlp collector and Tempo tracing db
 spec:
   project: default
   source:
@@ -57,6 +57,17 @@ spec:
                 jsonData:
                   authType: serviceAccount
                   tlsSkipVerify: true
+                editable: false
+              - name: Tempo
+                type: tempo
+                access: proxy
+                url: http://tempo.monitoring.svc.cluster.local:3200
+                jsonData:
+                  tracesToMetrics:
+                    datasourceUid: Prometheus
+                    spanStartTimeShift: "-1h"
+                    spanEndTimeShift: "1h"
+                    tags: ["service.name", "http.method"]
                 editable: false
         
         # Use the deployed postgres instance to store grafana data
