fix: scrape istio metrics with labeling them as release: prometheus-server

--- a/k8s/gitops/addons/istio/extras/telemetry.yaml
+++ b/k8s/gitops/addons/istio/extras/telemetry.yaml
@@ -3,6 +3,8 @@ kind: PodMonitor
 metadata:
   name: istio-proxy
   namespace: istio-system
+  labels:
+    release: prometheus-server
 spec:
   selector:
     matchExpressions:
