--- a/k8s/gitops/addons/tempo/service-monitor.yaml
+++ b/k8s/gitops/addons/tempo/service-monitor.yaml
@@ -6,6 +6,11 @@ metadata:
   labels:
     release: prometheus-server
 spec:
+  tolerations:
+    - key: workload
+      operator: Equal
+      value: weather-forecast
+      effect: NoSchedule
   selector:
     matchLabels:
       app: tempo
