core: make prometheus scrape everything with an empty selector core: remove custom labels from istio metrics pod monitor core: remove custom labels from tempo metrics service monitor core: add app for tempo service monitor test: for testing purpose, point all apps to current branch

--- a/k8s/gitops/addons/istio/prometheus-monitors/pod-monitor.yaml
+++ b/k8s/gitops/addons/istio/prometheus-monitors/pod-monitor.yaml
@@ -3,8 +3,6 @@ kind: PodMonitor
 metadata:
   name: istio-proxy
   namespace: istio-system
-  labels:
-    release: prometheus-server
 spec:
   selector:
     matchExpressions:
@@ -13,6 +11,7 @@ spec:
   namespaceSelector:
     any: true
   podMetricsEndpoints:
+    # Pointing to the endpoint which is exposed by the istio-proxy metrics
     - port: http-envoy-prom
       path: /stats/prometheus
       interval: 15s
