fix: correct scaping info for monitor

--- a/k8s/gitops/addons/tempo/prometheus-monitors/service-monitor.yaml
+++ b/k8s/gitops/addons/tempo/prometheus-monitors/service-monitor.yaml
@@ -6,11 +6,12 @@ metadata:
 spec:
   selector:
     matchLabels:
-      app: tempo
+      app.kubernetes.io/instance: tempo
+      app.kubernetes.io/name: tempo
   namespaceSelector:
     matchNames:
       - monitoring
   endpoints:
-    - port: prom-metrics  # Tempo exposes metrics on this port
+    - port: tempo-prom-metrics  # Tempo exposes metrics on this port name, please check service spec for port name validation
       interval: 30s
       scrapeTimeout: 10s
