core: adding node selector for all argocd workloads for correctly scheduling on user nodes rather than system nodes

--- a/k8s/gitops/addons/grafana/application.yaml
+++ b/k8s/gitops/addons/grafana/application.yaml
@@ -35,6 +35,10 @@ spec:
             value: "weather-forecast"
             effect: "NoSchedule"
 
+        # Select user nodes
+        nodeSelector:
+          kubernetes.azure.com/mode: user
+
         # The datasource simply points to the prometheus service 
         # that is deployed via the prometheus argocd app
         # the kubernetes datasource points to current cluster
