--- a/k8s/gitops/addons/istio/ingress.yaml
+++ b/k8s/gitops/addons/istio/ingress.yaml
@@ -27,6 +27,9 @@ spec:
             operator: Equal
             value: weather-forecast
             effect: NoSchedule
+        
+        nodeSelector:
+            kubernetes.azure.com/mode: user
 
         autoscaling:
           enabled: true
