--- a/k8s/gitops/addons/open-telemetry/collector.yaml
+++ b/k8s/gitops/addons/open-telemetry/collector.yaml
@@ -22,6 +22,8 @@ spec:
             operator: "Equal"
             value: "weather-forecast"
             effect: "NoSchedule"
+        nodeSelector:
+            kubernetes.azure.com/mode: user
 
         config:
           receivers:
