--- a/k8s/manifests/tools/htg/deployment_heavy-traffic-geenrator.yaml
+++ b/k8s/manifests/tools/htg/deployment_heavy-traffic-geenrator.yaml
@@ -26,6 +26,10 @@ spec:
         operator: 'Equal'
         value: 'weather-forecast'
         effect: 'NoSchedule'
+      
+      nodeSelector:
+        kubernetes.azure.com/mode: user
+
       containers:
       - name: generator
         image: ghcr.io/nicholasjackson/fake-service:v0.26.0
