--- a/k8s/manifests/weather-forecast/bff/database/stateful-set.yaml
+++ b/k8s/manifests/weather-forecast/bff/database/stateful-set.yaml
@@ -21,6 +21,10 @@ spec:
         operator: 'Equal'
         value: 'weather-forecast'
         effect: 'NoSchedule'
+
+      nodeSelector:
+        kubernetes.azure.com/mode: user
+        
       containers:
       - name: redis
         image: redis:7.2
