--- a/k8s/gitops/addons/istio/deamon.yaml
+++ b/k8s/gitops/addons/istio/deamon.yaml
@@ -24,7 +24,7 @@ spec:
               operator: Equal
               value: weather-forecast
               effect: NoSchedule
-              
+
           # Select user nodes
           nodeSelector:
             kubernetes.azure.com/mode: user
@@ -44,15 +44,22 @@ spec:
           configValidation: true
         
         meshConfig:
-          # necessary for emitting tracing metrics for otlp collector
+          # necessary for emitting tracing metrics for open telemetry collector
           enableTracing: true
+          defaultProviders:
+            tracing:
+              - otel
+          extensionProviders:
+            - name: otel
+              opentelemetry:
+                service: otlp-collector-opentelemetry-collector.monitoring.svc.cluster.local
+                port: 4317
           defaultConfig:
             tracing:
               # all requests are sent
               # use a lower percentage for production (10 per cent f.e)
               sampling: 100.0
-              otlp:
-                address: otlp-collector-opentelemetry-collector.monitoring.svc.cluster.local:4317
+
 
           
   destination:
