fix: add resource limits for grafana database

--- a/k8s/gitops/addons/grafana/database.yaml
+++ b/k8s/gitops/addons/grafana/database.yaml
@@ -55,6 +55,14 @@ spec:
           nodeSelector:
             kubernetes.azure.com/mode: user
 
+          resources:
+            requests:
+              cpu: 25m
+              memory: 100Mi
+            limits:
+              cpu: 500m
+              memory: 512Mi
+
   destination:
     namespace: monitoring
     server: https://kubernetes.default.svc
