--- a/k8s/gitops/addons/tempo/application.yaml
+++ b/k8s/gitops/addons/tempo/application.yaml
@@ -24,7 +24,7 @@ spec:
         persistence:
           enabled: true
           size: 5Gi
-        
+
         resources:
           requests:
             memory: "100Mi"
@@ -36,11 +36,31 @@ spec:
           otlp:
             protocols:
               http:
-                enable: true
-              # necessary because the oltp listeners
-              # on the tempo level uses grpc for streaming telemtry data
+                enabled: true
               grpc:
                 enabled: true
+
+        # Activate metrics generator
+        # Necessary for prometheus integration and for Tempo database monitoring via dedicated spans
+        # The most common metric is: tempo_spanmetrics_latency_bucket
+        # We also include the service_graph processor which correlates grafana metrics with their related traces
+        # That is necessary for grafana drill down functionality to traces from prometheus metrics
+        metricsGenerator:
+          enabled: true
+
+          processors:
+            - service-graphs
+            - span-metrics
+
+          config:
+            registry:
+              collection_interval: 15s
+
+          storage:
+            path: /var/tempo/metrics
+
+          serviceMonitor:
+            enabled: true
 
   destination:
     server: https://kubernetes.default.svc
