fix: temporarily schedule all addons on system node. A dedicated operations node will be created later when more capacities will be allocated to the project.

--- a/k8s/gitops/addons/grafana/application.yaml
+++ b/k8s/gitops/addons/grafana/application.yaml
@@ -34,10 +34,8 @@ spec:
             operator: "Equal"
             value: "weather-forecast"
             effect: "NoSchedule"
-
-        # Select user nodes
         nodeSelector:
-          kubernetes.azure.com/mode: user
+            kubernetes.azure.com/mode: system
 
         # The datasource simply points to the prometheus service 
         # that is deployed via the prometheus argocd app
