--- a/k8s/gitops/addons/istio/ingress.yaml
+++ b/k8s/gitops/addons/istio/ingress.yaml
@@ -27,9 +27,8 @@ spec:
             operator: Equal
             value: weather-forecast
             effect: NoSchedule
-        
         nodeSelector:
-            kubernetes.azure.com/mode: user
+            kubernetes.azure.com/mode: system
 
         autoscaling:
           enabled: true
