--- a/k8s/gitops/addons/kiali/application.yaml
+++ b/k8s/gitops/addons/kiali/application.yaml
@@ -22,7 +22,7 @@ spec:
               value: "weather-forecast"
               effect: "NoSchedule"
           nodeSelector:
-            kubernetes.azure.com/mode: user
+            kubernetes.azure.com/mode: system
             
           view_only_mode: false
 
