--- a/k8s/gitops/addons/open-telemetry/collector.yaml
+++ b/k8s/gitops/addons/open-telemetry/collector.yaml
@@ -23,7 +23,7 @@ spec:
             value: "weather-forecast"
             effect: "NoSchedule"
         nodeSelector:
-            kubernetes.azure.com/mode: user
+            kubernetes.azure.com/mode: system
 
         config:
           receivers:
